--- a/src/app/content/components/landing/landing.component.scss
+++ b/src/app/content/components/landing/landing.component.scss
@@ -30,9 +30,23 @@
 }
 
 .card-img-top {
-    width: auto;
+    width: 100%;
+    height: 200px;
 }
 
 .card-body a {
     color: #fff;
 }
+
+.landing {
+    font-size: 0.9rem;
+}
+
+.btn {
+    cursor: pointer;
+}
+
+.card:hover {
+    box-shadow: 0px 0px 3px 0px rgba(0,191,255,0.75);
+}
+
