--- a/src/app/content/components/schedules/schedules.component.html
+++ b/src/app/content/components/schedules/schedules.component.html
@@ -6,13 +6,15 @@
 <div class="text-center my-5">
   <div class="h3">August 2019</div>
   <div class="h5 text-muted">Last Updated 18 Hours Ago</div>
-  <div style="width: 70vh; height: 50vh; margin: 0px auto"><embed src="../../../../assets/img/testPDF.pdf" width= "100%" height= "100%"></div>
+  <div class="dSchedule d-none d-md-block"><embed src="../../../../assets/img/testPDF.pdf" width= "100%" height= "100%"></div>
+  <div class="btn btn-primary d-md-none">Check August Schedule</div>
 </div>
 
 <div class="text-center my-5">
   <div class="h3">September 2019</div>
   <div class="h5 text-muted">Last Updated 2 days Ago</div>
-  <div style="width: 70vh; height: 50vh; margin: 0px auto"><embed src="../../../../assets/img/testPDF.pdf" width= "100%" height= "100%"></div>
+  <div class="dSchedule d-none d-md-block"><embed src="../../../../assets/img/testPDF.pdf" width= "100%" height= "100%"></div>
+  <div class="btn btn-primary d-md-none">Check September Schedule</div>
 </div>
 
 <!-- <embed src="../../../../assets/img/testPDF.pdf" width= "500" height= "375"> -->
